admin detalles actual.

--- a/src/app/ModuloAdministracion/pg-administradores/pg-administradores.component.html
+++ b/src/app/ModuloAdministracion/pg-administradores/pg-administradores.component.html
@@ -47,7 +47,7 @@
               </th>
               <th pSortableColumn="nombre">
                   <div class="flex align-items-center">
-                      Nombres <p-sortIcon field="nombre"></p-sortIcon>
+                      Administrador <p-sortIcon field="nombre"></p-sortIcon>
                   </div>
               </th>
               <th pSortableColumn="correo_electronico">
