--- a/src/app/ModuloAdministracion/pg-ciudadanos/pg-ciudadanos.component.html
+++ b/src/app/ModuloAdministracion/pg-ciudadanos/pg-ciudadanos.component.html
@@ -1,144 +1,179 @@
 <div class="pagetitle">
     <h1>Gestion de Ciudadanos</h1>
-  </div>
-  <section class="section dashboard">
-    <div class="card separador-componentes">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Ciudadanos</h5>
-          <p-table
-            #dt1
-            [value]="lsListado"
-            dataKey="ciudadano_id"
-            [rows]="10"
-            [showCurrentPageReport]="true"
-            [rowsPerPageOptions]="[10, 25, 50]"
-            [paginator]="true"
-            currentPageReportTemplate="Mostrar {first} - {last} de {totalRecords} elementos"
-            [globalFilterFields]="['ciudadano_id','nombre', 'apellido','telefono','correo']"
-            [scrollable]="true"
-            scrollHeight="500px"
-            [tableStyle]="{ 'min-width': '20rem' }"
-            [sortMode]="'single'"
-          >
-          <ng-template pTemplate="caption">
-            <div class="flex">
-              <button pButton label="Limpiar" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
-              <span class="p-input-icon-left ml-auto">
-                <i class="pi pi-search"></i>
-                <input pInputText type="text" (input)="applyFilter($event)" placeholder="Buscar" />
-              </span>   
-            </div>
-          </ng-template>
-          <ng-template pTemplate="header">
-            <tr>
-                <th pSortableColumn="ciudadano_id">
-                  <div class="flex align-items-center">
-                      Id <p-sortIcon field="ciudadano_id"></p-sortIcon>
-                  </div>
-                </th>
-                <th pSortableColumn="nombre">
-                    <div class="flex align-items-center">
-                        Ciudadano <p-sortIcon field="nombre"></p-sortIcon>
-                    </div>
-                </th>
-                <th pSortableColumn="telefono">
-                    <div class="flex align-items-center">
-                        Telefono <p-sortIcon field="telefono"></p-sortIcon>
-                    </div>
-                </th>
-                <th pSortableColumn="fecha_nac">
-                    <div class="flex align-items-center">
-                        Fecha de Nacimiento <p-sortIcon field="fecha_nac"></p-sortIcon>
-                    </div>
-                </th>
-                <th pSortableColumn="correo">
-                    <div class="flex align-items-center">
-                        Correo <p-sortIcon field="correo"></p-sortIcon>
-                    </div>
-                </th>
-                <th pSortableColumn="estado">
-                  <div class="flex align-items-center">
-                      Estado <p-sortIcon field="estado"></p-sortIcon>
-                  </div>
-                </th>
-                <th>
-                    <div class="flex align-items-center">
-                      Gestión
-                    </div>
-                </th>
-                
-                <!-- <th>
-                  <div class="flex align-items-center">
-                      Eliminar
-                  </div>
-                </th> -->
-            </tr>
+</div>
+<section class="section dashboard">
+  <div class="card separador-componentes">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Ciudadanos</h5>
+        <p-table
+          #dt1
+          [value]="lsListado"
+          dataKey="ciudadano_id"
+          [rows]="10"
+          [showCurrentPageReport]="true"
+          [rowsPerPageOptions]="[10, 25, 50]"
+          [paginator]="true"
+          currentPageReportTemplate="Mostrar {first} - {last} de {totalRecords} elementos"
+          [globalFilterFields]="['ciudadano_id','nombre', 'apellido','telefono','correo']"
+          [scrollable]="true"
+          scrollHeight="500px"
+          [tableStyle]="{ 'min-width': '20rem' }"
+          [sortMode]="'single'"
+        >
+        <ng-template pTemplate="caption">
+          <div class="flex">
+            <button pButton label="Limpiar" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
+            <span class="p-input-icon-left ml-auto">
+              <i class="pi pi-search"></i>
+              <input pInputText type="text" (input)="applyFilter($event)" placeholder="Buscar" />
+            </span>   
+          </div>
         </ng-template>
-        <ng-template pTemplate="body" let-customer>
+        <ng-template pTemplate="header">
           <tr>
-            <td>{{ customer.ciudadano_id }}</td>
-            <td>{{ customer.nombre +" "+ customer.apellido}}</td>
-            <td>{{ customer.telefono }}</td>
-            <td>{{ customer.fecha_nac | date: 'short' }}</td>
-            <td>{{ customer.correo }}</td>
+              <th pSortableColumn="ciudadano_id">
+                <div class="flex align-items-center">
+                    Id <p-sortIcon field="ciudadano_id"></p-sortIcon>
+                </div>
+              </th>
+              <th pSortableColumn="nombre">
+                  <div class="flex align-items-center">
+                      Ciudadano <p-sortIcon field="nombre"></p-sortIcon>
+                  </div>
+              </th>
+              <th pSortableColumn="telefono">
+                  <div class="flex align-items-center">
+                      Telefono <p-sortIcon field="telefono"></p-sortIcon>
+                  </div>
+              </th>
+              <th pSortableColumn="fecha_nac">
+                  <div class="flex align-items-center">
+                      Fecha de Nacimiento <p-sortIcon field="fecha_nac"></p-sortIcon>
+                  </div>
+              </th>
+              <th pSortableColumn="correo">
+                  <div class="flex align-items-center">
+                      Correo <p-sortIcon field="correo"></p-sortIcon>
+                  </div>
+              </th>
+              <th pSortableColumn="estado">
+                <div class="flex align-items-center">
+                    Estado <p-sortIcon field="estado"></p-sortIcon>
+                </div>
+              </th>
+              <th>
+                  <div class="flex align-items-center">
+                    Gestión
+                  </div>
+              </th>
+              
+              <!-- <th>
+                <div class="flex align-items-center">
+                    Eliminar
+                </div>
+              </th> -->
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-customer>
+        <tr>
+          <td>{{ customer.ciudadano_id }}</td>
+          <td>{{ customer.nombre +" "+ customer.apellido}}</td>
+          <td>{{ customer.telefono }}</td>
+          <td>{{ customer.fecha_nac | date: 'short' }}</td>
+          <td>{{ customer.correo }}</td>
 
-            <td>
+          <td>
+          
+            <p-tag *ngIf="customer.estado == false" severity="danger" [value]="'DESACTIVADO'"></p-tag>
+            <p-tag *ngIf="customer.estado == true" severity="success" [value]="'ACTIVO'"></p-tag>
             
-              <p-tag *ngIf="customer.estado == false" severity="danger" [value]="'DESACTIVADO'"></p-tag>
-              <p-tag *ngIf="customer.estado == true" severity="success" [value]="'ACTIVO'"></p-tag>
-             
-            <td>
-               <!-- 
-              <p-button
-                type="button"
-                icon="pi pi-pencil"
-                styleClass="p-button-text"
-                (click)="ModalEditarInformacion(customer)"
-              ></p-button>
-              -->
-              <p-button
-                type="button"
-                icon="pi pi-trash"
-                styleClass="p-button-text"
-                (click)="ModalCambiarEstado(customer)"
-              ></p-button>
-            
-            </td>
-            <!--
-            
-            <td>
-              <p-button
-                type="button"
-                icon="pi pi-trash"
-                styleClass="p-button-text"
-                (click)="ModalEliminar(customer)"
-              ></p-button>
-            </td>-->
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="emptymessage">
-          <tr>
-              <td colspan="5">No se encontraron Ciudadanos.</td>
-          </tr>
-        </ng-template>
-       
-      </p-table>
-    </div>
-    <!--
-    <p-dialog
-      header="Actualización"
-      [(visible)]="visibleEditar"
-      [modal]="true"
-      [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
-      [draggable]="false"
-      [resizable]="false"
-    >
-    <ng-template pTemplate="header">
-      <span class="text-xl font-bold">Actualización</span>
-    </ng-template>
+          <td>
+              <!-- 
+            <p-button
+              type="button"
+              icon="pi pi-pencil"
+              styleClass="p-button-text"
+              (click)="ModalEditarInformacion(customer)"
+            ></p-button>
+            -->
+            <p-button
+              type="button"
+              icon="pi pi-trash"
+              styleClass="p-button-text"
+              (click)="ModalCambiarEstado(customer)"
+            ></p-button>
+          
+          </td>
+          <!--
+          
+          <td>
+            <p-button
+              type="button"
+              icon="pi pi-trash"
+              styleClass="p-button-text"
+              (click)="ModalEliminar(customer)"
+            ></p-button>
+          </td>-->
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+            <td colspan="5">No se encontraron Ciudadanos.</td>
+        </tr>
+      </ng-template>
     
-    <ng-template pTemplate="content">
+    </p-table>
+    </div>
+  </div>
+  <!--
+  <p-dialog
+    header="Actualización"
+    [(visible)]="visibleEditar"
+    [modal]="true"
+    [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
+    [draggable]="false"
+    [resizable]="false"
+  >
+  <ng-template pTemplate="header">
+    <span class="text-xl font-bold">Actualización</span>
+  </ng-template>
+  
+  <ng-template pTemplate="content">
+    <label for="nombre" class="form-label" style="font-size: 14px;">Ciudadano: </label>
+    <div class="p-inputgroup">
+      <span class="p-inputgroup-addon">
+          <i class="pi pi-pencil"></i>
+      </span>
+      <input pInputText id="nombre" placeholder="Nombres" [(ngModel)]="objSeleccion.nombre" class="form-control" required />
+    </div>
+    <label for="Correo" class="form-label" style="font-size: 14px;">Correo : </label>
+    <div class="p-inputgroup">
+        <span class="p-inputgroup-addon">
+            <i class="pi pi-pencil"></i>
+        </span>
+        <input pInputText placeholder="Correo" [(ngModel)]="objSeleccion.correo" class="form-control" readonly/>
+      </div>
+  </ng-template>
+  
+  <ng-template pTemplate="footer">
+    <p-button icon="pi pi-save"  label="Actualizar" styleClass="p-button-sm" (click)="RegistrarActualizacion()"></p-button>
+  </ng-template>
+  
+  </p-dialog>-->
+  <p-dialog
+    header="Estado"
+    [(visible)]="visibleEstado"
+    [modal]="true"
+    [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
+    [draggable]="false"
+    [resizable]="false"
+  >
+  <ng-template pTemplate="header">
+    <span class="text-xl font-bold">{{strEstado}} Administrador</span>
+  </ng-template>
+  
+  <ng-template pTemplate="content">
       <label for="nombre" class="form-label" style="font-size: 14px;">Ciudadano: </label>
       <div class="p-inputgroup">
         <span class="p-inputgroup-addon">
@@ -152,82 +187,47 @@
               <i class="pi pi-pencil"></i>
           </span>
           <input pInputText placeholder="Correo" [(ngModel)]="objSeleccion.correo" class="form-control" readonly/>
-        </div>
+      </div>
     </ng-template>
-    
-    <ng-template pTemplate="footer">
-      <p-button icon="pi pi-save"  label="Actualizar" styleClass="p-button-sm" (click)="RegistrarActualizacion()"></p-button>
-    </ng-template>
-    
-    </p-dialog>-->
-    <p-dialog
-      header="Estado"
-      [(visible)]="visibleEstado"
-      [modal]="true"
-      [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
-      [draggable]="false"
-      [resizable]="false"
-    >
-    <ng-template pTemplate="header">
-      <span class="text-xl font-bold">{{strEstado}} Administrador</span>
-    </ng-template>
-    
-    <ng-template pTemplate="content">
-        <label for="nombre" class="form-label" style="font-size: 14px;">Ciudadano: </label>
-        <div class="p-inputgroup">
-          <span class="p-inputgroup-addon">
-              <i class="pi pi-pencil"></i>
-          </span>
-          <input pInputText id="nombre" placeholder="Nombres" [(ngModel)]="objSeleccion.nombre" class="form-control" required />
-        </div>
-        <label for="Correo" class="form-label" style="font-size: 14px;">Correo : </label>
-        <div class="p-inputgroup">
-            <span class="p-inputgroup-addon">
-                <i class="pi pi-pencil"></i>
-            </span>
-            <input pInputText placeholder="Correo" [(ngModel)]="objSeleccion.correo" class="form-control" readonly/>
-          </div>
-    </ng-template>
-    
-    <ng-template pTemplate="footer">
-      <p-button icon="pi pi-save"  label="Guardar" styleClass="p-button-sm" (click)="EstadoCambiarActualizacion()"></p-button>
-    </ng-template>
-    
-    </p-dialog>
   
+    <ng-template pTemplate="footer">
+    <p-button icon="pi pi-save"  label="Guardar" styleClass="p-button-sm" (click)="EstadoCambiarActualizacion()"></p-button>
+    </ng-template>
+  
+    </p-dialog>
+
     <p-dialog
-      header="Eliminar"
-      [(visible)]="visibleEliminar"
-      [modal]="true"
-      [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
-      [draggable]="false"
-      [resizable]="false"
+    header="Eliminar"
+    [(visible)]="visibleEliminar"
+    [modal]="true"
+    [style]="{ width: '50vw', minWidth: '300px', maxWidth: '80vw' }"
+    [draggable]="false"
+    [resizable]="false"
     >
     <ng-template pTemplate="header">
-      <span class="text-xl font-bold">Elimina Definitivamente al administrador</span>
+    <span class="text-xl font-bold">Elimina Definitivamente al administrador</span>
+    </ng-template>
+  
+    <ng-template pTemplate="content">
+    <div class="p-inputgroup" style="margin-top: 15px;">
+      <span class="p-inputgroup-addon">
+        <label  class="form-label" style="font-size: 14px;">Nombres : </label>
+      </span>
+      <input pInputText [(ngModel)]="objSeleccion.nombre" class="p-inputtext-sm" readonly/>
+    </div>
+    <div class="p-inputgroup" style="margin-top: 15px;">
+      <span class="p-inputgroup-addon">
+        <label  class="form-label" style="font-size: 14px;">Correo : </label>
+      </span>
+      <input pInputText  [(ngModel)]="objSeleccion.correo_electronico" class="p-inputtext-sm" readonly/>
+    </div>
     </ng-template>
     
-    <ng-template pTemplate="content">
-      <div class="p-inputgroup" style="margin-top: 15px;">
-        <span class="p-inputgroup-addon">
-          <label  class="form-label" style="font-size: 14px;">Nombres : </label>
-        </span>
-        <input pInputText [(ngModel)]="objSeleccion.nombre" class="p-inputtext-sm" readonly/>
-      </div>
-      <div class="p-inputgroup" style="margin-top: 15px;">
-        <span class="p-inputgroup-addon">
-          <label  class="form-label" style="font-size: 14px;">Correo : </label>
-        </span>
-        <input pInputText  [(ngModel)]="objSeleccion.correo_electronico" class="p-inputtext-sm" readonly/>
-      </div>
-    </ng-template>
-      
     <ng-template pTemplate="footer">
       <p-button icon="pi pi-delete"  label="Eliminar" styleClass="p-button-sm" severity="danger" (click)="EliminarAdministrador()"></p-button>
     </ng-template> 
     
     </p-dialog>
     <p-toast></p-toast>
-  </div>
-  
-  
+    </div>
+</section>
