--- a/src/app/ModuloAdministracion/pg-material/pg-material.component.html
+++ b/src/app/ModuloAdministracion/pg-material/pg-material.component.html
@@ -180,16 +180,21 @@
       [resizable]="false"
     >
     <ng-template pTemplate="header">
-      <span class="text-xl font-bold">{{strEstado}}</span>
+      <span class="text-xl font-bold">{{strEstado}} Material</span>
     </ng-template>
     
-    <label for="Descripcion" class="form-label" style="font-size: 14px;">Nombre: </label>
     <ng-template pTemplate="content">
-      <div class="p-inputgroup">
+      <div class="p-inputgroup" style="margin-top: 10px;">
         <span class="p-inputgroup-addon">
-            <i class="pi pi-pencil"></i>
+          <label for="Descripcion" class="form-label" style="font-size: 14px;">Nombre: </label>
         </span>
-        <input pInputText placeholder="Estado" [(ngModel)]="objSeleccion.tipo" class="p-inputtext-sm" readonly/>
+        <input pInputText [(ngModel)]="objSeleccion.tipo" class="p-inputtext-sm" readonly/>
+      </div>
+      <div class="p-inputgroup" style="margin-top: 10px;">
+        <span class="p-inputgroup-addon" >
+          <label for="Descripcion" class="form-label" style="font-size: 14px;">Valor por Libra(GC): </label>
+        </span>
+        <input pInputText [(ngModel)]="objSeleccion.valor_por_libra" class="p-inputtext-sm" readonly/>
       </div>
     </ng-template>
     
@@ -199,6 +204,5 @@
     
     </p-dialog>
     <p-toast></p-toast>
-    </div>
-    
+  </div>
 </section>
